...
    
    private let paymentViewController: PaymentViewController
    private var cartPresenter: CartPresenter?
    private var isTapped = false
    private var idNFT = ""
    
    private lazy var filterButton: UIButton = {
        let imageButton = UIImage(named: "SortButton")?.withTintColor(
            .black, renderingMode: .alwaysOriginal)
        
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(imageButton, for: .normal)
...
    
    private lazy var paymentButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = .ypBlack
        button.layer.cornerRadius = 16
        button.setTitle("К оплате", for: .normal)
        button.addTarget(self, action: #selector(payButtonDidTapped), for: .touchUpInside)
        return button
    }()
    
    private lazy var labelStack: UIStackView = {
        let stack = UIStackView(arrangedSubviews: [countNFTLabel, priceNFTLabel])
...

// MARK: - extension CartCellDelete
extension CartViewController {
    func showActionSheet() {
        let alertController = UIAlertController(title: "Сортировка", message: nil, preferredStyle: .actionSheet)
        
        let priceAction = UIAlertAction(title: "По цене", style: .default) { _ in
            self.cartPresenter?.sortPriceNFTData()
            self.cartCollection.reloadData()
        }
        
        let ratingAction = UIAlertAction(title: "По рейтингу", style: .default) { _ in
            self.cartPresenter?.sortRatingNFTData()
            self.cartCollection.reloadData()
        }
        
        
        let nameAction = UIAlertAction(title: "По названию", style: .default) { _ in
            self.cartPresenter?.sortNameNFTData()
            self.cartCollection.reloadData()
        }
        
        let cancelAction = UIAlertAction(title: "Закрыть", style: .cancel, handler: nil)
        
        alertController.addAction(priceAction)
        alertController.addAction(ratingAction)
        alertController.addAction(nameAction)
        alertController.addAction(cancelAction)
        
...
